--- a/src/index.css
+++ b/src/index.css
@@ -63,6 +63,7 @@ body{
   height: 30px;
   border-radius: 4px;
   border: 0px;
+  outline: none;
 }
 
 .results{
@@ -104,12 +105,13 @@ font-weight: bold;
   border: 0px;
   position: relative;
   margin-right: 10px;
-  right: 2%;
+  right: 5%;
 }
 
 .selectores ul li{
   list-style-type: none;
   padding: 5px 10px 5px 10px;
+  width: 100px;
 }
 
 .dropdownUser ul li:hover{
@@ -144,6 +146,8 @@ width: 40px;
   background-color: white;
   padding: 0.65vw;
   border-radius: 5%;
+  min-width: 100px;
+  cursor: pointer;
 }
 
 .user i{
@@ -157,6 +161,7 @@ width: 40px;
   background-color: white;
   padding: 10px 0px 10px 0px;
   top: 4.8rem;
+  width: 120px;
   border: 1px solid gray;
 }
 
@@ -176,14 +181,24 @@ width: 40px;
 .button-login{
   background-color: white;
   padding: 6px;
+  color: black;
   margin-right: 30px;
   border-radius: 5%;
 }
 
+.button-login:hover{
+  background: #a7a0a0;
+}
+
 .button-register{
   background-color: white;
+  color: black;
   padding: 6px;
   border-radius: 5%;
+}
+
+.button-register:hover{
+  background: #a7a0a0;
 }
 
 /*  FOOTER  */
@@ -199,12 +214,20 @@ footer{
   width: 100%;
   COLOR: white;
   display: flex;
-  flex-direction: column;
+  flex-direction: row;
+  justify-content: flex-end;
 }
 
 .footer-contacto{
   font-size: 1.4rem;
   font-weight: bold;
+}
+
+.footer-content{
+  display: flex;
+  flex-direction: column;
+  align-items: flex-end;
+  padding-right: 10px;
 }
 
 .footer i{
@@ -214,40 +237,62 @@ footer{
 /* BANER */
 
 .image-banner{
-  max-width: 100%;
+    width: 100%;
+    height: auto;
+    display: block;
+}
+
+.banner-container{  
+  position: relative;
+}
+
+.banner-content{
+    position: absolute;
+    top: 0;
+    padding: 30px;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: flex-start;
+    background-color: rgba(0, 0, 0, 0.5);
+    color: #fff;
+    text-align: center;
+    padding-left: 10%;
+    box-sizing: border-box;
 }
 
 .title-banner{
-  position: absolute;
-  width: 424px;
-  height: 239px;
-  left: 208px;
-  top: 159px;
-  color: white;
-  font-size: 3em;
-  line-height: 59px;
-  }
+    font-size: 2.5rem; 
+    width: 400px;
+}
 
 .title-banner-bold{
   color: #E7A354
 }
 
-.button-Contact{
-  position: absolute;
-  left: 320px;
-  top: 350px;
-  width: 200px;
-  height: 45px;
+.button-Contact {
+  width: 191px;
+  margin: 15px;
+  height: 38px;
+  cursor: pointer;
   border-radius: 5px;
   border: 0;
   font-size: 2rem;
   font-family: 'Roboto Condensed', sans-serif;
 }
 
+.button-Contact:hover{
+  background: #a7a0a0;
+}
+
 /*  HOME  */
 
 .product-img{
   width: 240px;
+  min-height: 170px;
 }
 
 .products{
@@ -261,29 +306,33 @@ footer{
   margin-top: 10px;
 }
 
-.divider{
-  border: 1px solid #0503039d;
-  background: linear-gradient(blue, pink);
-  height: 30px;
-  margin: 10px 0px
-}
-
 .products:hover{
-    border: 1px solid blue;
+  -webkit-box-shadow: -1px 0px 78px -12px rgba(0,0,0,0.64);
+  -moz-box-shadow: -1px 0px 78px -12px rgba(0,0,0,0.64);
+  box-shadow: -1px 0px 78px -12px rgba(0,0,0,0.64);
 }
 
 .components{
   color: black;
 }
 
+.components-price{
+  width: 85%;
+  border-radius: 5px;
+  margin: 3%;
+  background-color: #1a16166b;
+}
+
 .components h3{
 font-weight: bold;
 color: green;
+font-size: 1.3rem;
+padding: 2%;
 }
 
 .components-container{
   display: flex;
-  justify-content: space-around;
+  flex-direction: column;
   align-items: center;
   
 }
@@ -293,7 +342,9 @@ color: green;
 }
 
 .slide-container{
-  padding-left: 8%;
+  display: flex;
+  justify-content: center;
+  margin: 20px 0px;
 }
 
 .slide-text{
@@ -301,9 +352,17 @@ color: green;
   justify-content: space-between;
   align-items: center;
   font-size: 1.5rem;
-  padding: 10px;
-  margin-right: 11%;
-  padding-left: 3%;
+  padding-left: 3.1%;
+}
+
+.slide-text h3{
+  padding: 3px;
+  background-color: rgb(189, 179, 135);
+  border-radius: 4px;
+}
+
+.slide-text a{
+ padding: 3px;
 }
 
 .slide-all-products{
@@ -313,15 +372,18 @@ color: green;
 .slide-last5Products{
   display: flex;
   flex-wrap: wrap;
+  justify-content: center;
 }
 
 .cards-title{
-  display: flex;
-  padding:10px;
-  font-size: 1.8rem;
-  padding-top: 50px;
-  padding-left: 11%;
+    display: flex;
+    margin: 25px;
+    background-color: #bdb38726;
+    font-size: 1.8rem;
+    border-radius: 10px;
+    justify-content: center;
 }
+
 
 .productCategory{
 font-weight: bold;
@@ -334,19 +396,24 @@ font-weight: bold;
 /* PAGINA CATEGORIAS */
 
 .cards-category{
-  display: flex;
-  flex-wrap: wrap;
-  padding-left: 8%;
+    display: flex;
+    /* flex-wrap: wrap; */
+    /* padding-left: 8%; */
+    justify-content: center;
+    padding-bottom: 1%;
 }
+
 
 .card-category{
   background-color: #4C4C4C;
-  margin: 0px 25px 25px 50px;
+  margin-left: 3vw;
   border-radius: 3%;
 }
 
 .card-category:hover{
-  border-radius: 30%;
+  -webkit-box-shadow: -1px 0px 78px -12px rgba(0,0,0,0.64);
+-moz-box-shadow: -1px 0px 78px -12px rgba(0,0,0,0.64);
+box-shadow: -1px 0px 78px -12px rgba(0,0,0,0.64);
 }
 
 .category-img{
@@ -377,7 +444,9 @@ font-weight: bold;
 }
 
 .products-CategoryCard:hover{
-  border: 1px solid blue;
+  -webkit-box-shadow: -1px 0px 78px -12px rgba(0,0,0,0.64);
+-moz-box-shadow: -1px 0px 78px -12px rgba(0,0,0,0.64);
+box-shadow: -1px 0px 78px -12px rgba(0,0,0,0.64);
 }
 
 .categoryPage-title{
@@ -386,6 +455,7 @@ font-weight: bold;
   font-size: 1rem;
   justify-content: center;
 }
+
 
 /*  REGISTER AND LOGIN  */
 
@@ -435,6 +505,12 @@ font-weight: bold;
  margin-top: 14px;
 }
 
+.user-input select{
+  width: 20em;
+  height: 30px;
+}
+
+
 .button-user{
   margin-top: 30px;
   width: 20em;
@@ -468,71 +544,83 @@ font-weight: bold;
 
 /* PRODUCT DETAIL */
 
-.productDetail-img{
+.productDetail-img {
   width: 100%;
-  max-height: 300px;
-  max-width: 300px;
-
-  margin: 0 auto;
+  max-height: 900px;
+  max-width: 550px;
 }
 
+
 .productDetail-card{
-  min-width: 50vh;
-  min-height: 50vh;
-  box-shadow: 0 0 5px rgb(27, 25, 25);
   display: flex;
   padding: 3%;
-  flex-direction: column;
+  flex-direction: row;
   justify-content: center;
 }
 
-.productDetail-precio{
+.productDetail-precio {
   display: flex;
   background-color: #312e3660;
   align-items: center;
   color: green;
   font-weight: bold;
   padding: 0.3vh;
-  border-radius: 10%;
+  border-radius: 10px;
+  padding: 5%;
+  justify-content: center;
 }
 
-.productDetail-container{
+
+.productDetail-container {
   position: absolute;
   top: 50%;
   left: 50%;
+  max-width: 950px;
+  max-height: 800px;
+  background-color: beige;
+  width: 100%;
   transform: translate(-50%,-50%);
 }
+
 
 .productDetail-name{
   font-size: 2.5rem;
 }
 
-.productDetail-content{
-  padding-top: 3%;
+.productDetail-content {
+  padding: 3% 0% 3% 3%;
 }
 
-.productDetail-button{
+
+.productDetail-button {
   margin-top: 2%;
-  width: 10vh;
   height: 5vh;
   background-color: #0054ff94;
   border-radius: 6%;
   font-weight: bold;
-  border-radius: 10%;
+  border-radius: 10px;
   border: 0;
-  font-size: 0.9;
+  margin-top: 5%;
+  cursor: pointer;
 }
 
-.productDetail-info{
-  padding-top: 2%;
+.productDetail-button:hover{
+  background-color: #4c4c4cfd;
+}
+
+
+.productDetail-info {
+  padding: 5%;
   display: flex;
   justify-content: space-evenly;
 }
+
 
 .productDetail-buy{
   display: flex;
   padding-top: 2%;
   justify-content: space-evenly;
+  flex-direction: column;
 }
 
 /* CART */
